--- a/.github/workflows/rlc-stats.yml
+++ b/.github/workflows/rlc-stats.yml
@@ -2,7 +2,11 @@ name: RLC Scraper - Test Co Minutę
 
 on:
   schedule:
-    - cron: "0 */2 * * *"  # co 2 godziny
+    - cron: "0 5,9,13,17,21 * * *"  # CRON dla zimy
+  # cron dla lata
+#      schedule:
+  #  - cron: "0 4,8,12,16,20 * * *"
+
   workflow_dispatch:      # dodatkowo możliwość ręcznego odpalenia
 
 jobs:
