--- a/.github/workflows/rlc-stats.yml
+++ b/.github/workflows/rlc-stats.yml
@@ -2,7 +2,7 @@ name: RLC Scraper - Test Co Minutę
 
 on:
   schedule:
-    - cron: "0 5,9,13,17,21 * * *"  # CRON dla zimy
+    - cron: "0 17/2 * * *"  # CRON dla zimy
   # cron dla lata
 #      schedule:
   #  - cron: "0 4,8,12,16,20 * * *"
