--- a/.github/workflows/rlc-stats.yml
+++ b/.github/workflows/rlc-stats.yml
@@ -2,10 +2,7 @@ name: RLC Scraper - Test Co Minutę
 
 on:
   schedule:
-    - cron: "0 11/4 * * *"  # CRON dla zimy
-  # cron dla lata
-#      schedule:
-  #  - cron: "0 4,8,12,16,20 * * *"
+    - cron: "0 */2 * * *"
 
   workflow_dispatch:      # dodatkowo możliwość ręcznego odpalenia
 
